apps/travel-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-budget
  namespace: travel-budget
spec:
  selector:
    app: travel-budget
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
