apps/travel-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-budget
  namespace: travel-budget
spec:
  ingressClassName: nginx
  rules:
  - host: travel-budget.jaco.lab
    http:
      paths:

      - path: /user
        pathType: Prefix
        backend:
          service:
            name: travel-budget-backend
            port:
              number: 5001

      - path: /trip
        pathType: Prefix
        backend:
          service:
            name: travel-budget-backend
            port:
              number: 5001

      - path: /expense
        pathType: Prefix
        backend:
          service:
            name: travel-budget-backend
            port:
              number: 5001

      - path: /report
        pathType: Prefix
        backend:
          service:
            name: travel-budget-backend
            port:
              number: 5001

      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-budget-frontend
            port:
              number: 80
